Publish page-1 index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="home-template">
 
     
-<header class="main-header no-cover">
+<header class="main-header " style="background-image: url(https://static.pexels.com/photos/9635/suit-portrait-preparation-wedding.jpg)">
     <nav class="main-nav overlay clearfix">
         
         <!-- <a class="subscribe-button icon-feed" href="https://miroque.github.io/shirokuma/rss/">Subscribe</a> -->
@@ -96,7 +96,7 @@
 
 
     <footer class="site-footer clearfix">
-        <section class="copyright"><a href="https://miroque.github.io/shirokuma">Shirokuma&#x27;s Roar</a> &copy; 2015</section>
+        <section class="copyright"><a href="https://miroque.github.io/shirokuma">Shirokuma&#x27;s Roar</a> &copy; 2016</section>
         <section class="poweredby">Proudly published with <a href="http://hubpress.io">HubPress</a></section>
     </footer>
 
