--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="home-template">
 
     
-<header class="main-header " style="background-image: url(https://static.pexels.com/photos/26742/pexels-photo.jpg)">
+<header class="main-header " style="background-image: url(https://static.pexels.com/photos/64769/pexels-photo-64769.jpeg)">
     <nav class="main-nav overlay clearfix">
         
         <!-- <a class="subscribe-button icon-feed" href="https://miroque.github.io/shirokuma/rss/">Subscribe</a> -->
