Publish page-1 index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
 <header class="main-header " style="background-image: url(https://static.pexels.com/photos/64769/pexels-photo-64769.jpeg)">
     <nav class="main-nav overlay clearfix">
-        
+        <a class="blog-logo" href="https://miroque.github.io/shirokuma"><img src="http://icons.iconarchive.com/icons/elegantthemes/beautiful-flat/48/aperture-icon.png" alt="Blog Logo" /></a>
         <!-- <a class="subscribe-button icon-feed" href="https://miroque.github.io/shirokuma/rss/">Subscribe</a> -->
     </nav>
     <div class="vertical">
